objects/ssot__ApplicationDecision__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantDecision__c</fullName>
        <label>Applicant Decision</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationDecision__c</fullName>
        <label>Application Decision</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionAuthorityId__c</fullName>
        <label>Decision Authority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Decision Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreliminaryApplicationRefId__c</fullName>
        <label>Preliminary Application Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817704826_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_AccountId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_AccountId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1719817704826_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818359660_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_DecisionAuthorit_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_DecisionAuthorit_rel</relationshipLabel>
        <relationshipName>rel_1719818359660_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818445664_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_ApplicationId_ma_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_ApplicationId_ma_rel</relationshipLabel>
        <relationshipName>rel_1719818445664_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>